# NDSR-Code

./: .gitignore  README.md
GRB_basemodel/: NDSR_basemodel.py
NDSR_GRB_allpaths/: CMakeLists.txt
NDSR_GRB_allpaths/src/: CMakeLists.txt  Graph_Reader.h  NDSR_Instance.cpp  NDSR_Instance.hpp  NDSR_Reader.h  Nodes_and_labels.h  RCSPP_graph.cpp  RCSPP_graph.hpp  get_all_RCSPP.h  helper.h  main.cpp
SCIP_BranchPrice/: Makefile
data/: RBWQN30A120C90W2MM_S1943_net.txt  RBWQN30A120C90W2MM_S5138_net.txt  RBWQN30A120C90W2MM_S6703_net.txt  RBWQN30A120C90W2MM_S7984_net.txt  RBWQN30A120C90W2MM_S8405_net.txt  RBWQN40A160C120W2MM_S1205_net.txt  RBWQN40A160C120W2MM_S1448_net.txt  RBWQN40A160C120W2MM_S2415_net.txt  RBWQN40A160C120W2MM_S2845_net.txt  RBWQN40A160C120W2MM_S3861_net.txt  RBWQN50A150C150W2MM_S1116_net.txt  RBWQN50A150C150W2MM_S3118_net.txt  RBWQN50A150C150W2MM_S5958_net.txt  RBWQN50A150C150W2MM_S7176_net.txt  RBWQN50A150C150W2MM_S8958_net.txt  RBWQN50A200C100W2MM_S1287_net.txt  RBWQN50A200C100W2MM_S3697_net.txt  RBWQN50A200C100W2MM_S7554_net.txt  RBWQN50A200C100W2MM_S7859_net.txt  RBWQN50A200C100W2MM_S8226_net.txt  RBWQN50A200C150W2MM_S1788_net.txt  RBWQN50A200C150W2MM_S3801_net.txt  RBWQN50A200C150W2MM_S5508_net.txt  RBWQN50A200C150W2MM_S5890_net.txt  RBWQN50A200C150W2MM_S6077_net.txt  RBWQN50A200C200W2MM_S1025_net.txt  RBWQN50A200C200W2MM_S4325_net.txt  RBWQN50A200C200W2MM_S4546_net.txt  RBWQN50A200C200W2MM_S7098_net.txt  RBWQN50A200C200W2MM_S8273_net.txt  RBWQN50A250C150W2MM_S1306_net.txt  RBWQN50A250C150W2MM_S5249_net.txt  RBWQN50A250C150W2MM_S5278_net.txt  (+17 more)
(+16 files in other folders)
